--- a/FrontDev/CSS/Loginstyle.css
+++ b/FrontDev/CSS/Loginstyle.css
@@ -1,15 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 
-* {
-  margin: 0%;
-  padding: 0%;
-  box-sizing: border-box;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
 }
 
-.navbar {
-  box-shadow: 0px 8px 8px -6px rgba(0, 0, 0, 0.2);
-  padding-top: 15px;
-  padding-bottom: 15px;
+* {
+  box-sizing: border-box;
+  outline: none !important;
+  text-decoration: none !important;
 }
 
 .navbar-nav a {
@@ -48,58 +48,59 @@
   border-color: #5b9bd5;
 }
 
-section {
-  position: relative;
-  width: 100%;
+.navbar {
+  box-shadow: 0px 8px 8px -6px rgba(0, 0, 0, 0.2);
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.login-form {
   height: 100vh;
+  background-image: url("/Images/BG.png");
+  background-size: cover;
   display: flex;
-}
-section .imgBx {
-  position: relative;
-  width: 45%;
-  height: 100%;
-}
-section .imgBx img {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-section .contentBx {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  width: 55%;
-  height: 100%;
+  justify-content: center;
 }
-section .contentBx .formBx {
-  width: 50%;
+
+.login-form .box {
+  min-width: 400px;
+  min-height: 450px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 10px #cccccc;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
 }
-section .contentBx .formBx h2 {
-  font-weight: 600;
-  font-size: 1.5em;
-  margin-bottom: 20px;
-  display: inline-block;
-  letter-spacing: 1px;
+
+.login-form .box .img img {
+  width: 150px;
+  display: block;
+  margin: auto;
 }
-section .contentBx .formBx .inputBx {
+.login-form .box .form-fields p {
+  margin-bottom: 0px;
+  font-size: 15px;
+}
+
+.login-form .box .form-fields .input-box {
   margin-bottom: 10px;
 }
-section .contentBx .formBx .inputBx input {
+
+.login-form .box .form-fields .input-box input {
   width: 100%;
   padding: 10px 20px;
   outline: none;
   font-weight: 400;
   border: 1px solid rgb(171, 194, 243);
-  font-size: 16px;
+  font-size: 13px;
   letter-spacing: 1px;
   color: black;
   background: transparent;
   border-radius: 10px;
 }
-section .contentBx .formBx .inputBx input[type="submit"] {
+
+.login-form .box .form-fields .input-box input[type="submit"] {
   background-color: rgb(94, 143, 199);
   color: white;
   outline: none;
@@ -107,32 +108,21 @@ section .contentBx .formBx .inputBx input[type="submit"] {
   font-weight: 500;
   cursor: pointer;
 }
-section .contentBx .formBx .inputBx input[type="submit"]:hover {
+.login-form .box .form-fields .input-box input[type="submit"]:hover {
   background: rgb(106, 149, 212);
 }
-section .contentBx .formBx .inputBx p {
+
+.login-form .box .form-fields .text-field p {
   text-align: center;
   color: black;
-  font-size: 15px;
+  font-size: 13px;
 }
-section .contentBx .formBx .inputBx p a {
+.login-form .box .form-fields .text-field p a {
   color: rgb(106, 149, 212);
 }
-@media (max-width: 780px) {
-  section .imgBx {
-    display: none;
-  }
-  section .contentBx {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
-  section .contentBx .formBx {
-    width: 100%;
-    padding: 40px;
-    margin: 50px;
+
+@media screen and (max-width: 768px) {
+  body {
+    padding-top: 0px;
   }
 }
